# egui-starter

./: .gitignore  Cargo.toml  README.md  index.html
assets/: sw.js
src/: app.rs  main.rs
