[package]
name = "egui-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
